fixed responsiveness on small width

--- a/style.css
+++ b/style.css
@@ -166,10 +166,14 @@ body {
     background-color: hsl(0, 0%, 15%);
 }
 
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 400px) {
     .container {
         height: 100%;
         justify-content: center;
         padding: 2rem 1rem;
+        border-radius: 0;
+    }
+    .formBtns {
+        padding: 8px 0;
     }
 }
